ingress/content.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: content-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - fabmedical-318699-ingress.eastus.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: fabmedical-318699-ingress.eastus.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
          - path: /api/(.*)
            backend:
              serviceName: api
              servicePort: 3001
